[package]
name = "serde-untagged"
version = "0.1.6"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding", "no-std"]
description = "Serde `Visitor` implementation for deserializing untagged enums"
documentation = "https://docs.rs/serde-untagged"
edition = "2021"
keywords = ["serde", "untagged"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/serde-untagged"
rust-version = "1.61"

[dependencies]
erased-serde = { version = "0.4.2", default-features = false, features = ["alloc"] }
serde = { version = "1.0.194", default-features = false, features = ["alloc"] }
typeid = "1"

[dev-dependencies]
serde_derive = "1.0.194"
serde_json = "1.0.110"
toml = "0.8"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
